--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.6
   http: ^1.2.1
   flutter_session_manager: ^1.0.3
+  url_launcher: ^6.0.9
 
 dev_dependencies:
   flutter_test:
